# Frame2Threat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml  eval.yaml  features.yaml  labels.yaml  model_baseline.yaml  model_gnn.yaml  model_gru.yaml  model_possession.yaml
models/: results_summary.json  v1_results_summary.json
notebooks/: 01_data_audit.ipynb  02_label_validation.ipynb  03_eda.ipynb  04_baselines.ipynb  05_gnn.ipynb  06_error_analysis.ipynb  07_possession_baseline.ipynb  08_possession_sequence_model.ipynb  09_possession_eda.ipynb  10_early_prediction.ipynb
reports/: 01_research_motivation.md  02_football_analytics_landscape.md  03_methodology.md  data_dictionary.md  design_decisions.md  experiment_log.md  feature_timing_audit.md  final_report.md  label_methodology.md
reports/repro/: README.md  scored_possessions_manifest.json  scored_possessions_sample.csv
scripts/: reproduce_v1.py  reproduce_v1.sh  run_pipeline.py
src/: __init__.py
src/app/: __init__.py  app.py  cli.py
src/data/: __init__.py  build_store.py  ingest.py  inventory.py  join_pass_frames.py  parse_360.py  parse_events.py  parse_lineups.py  parse_possessions.py  splits.py
src/evaluation/: __init__.py  ablations.py  calibration.py  early_evaluation.py  metrics.py  possession_attribution.py  tactical_review.py
src/features/: __init__.py  early_features.py  event_features.py  geometry_features.py  graph_builder.py  possession_features.py  sequence_context.py
src/labels/: __init__.py  dangerous_progression.py  downstream_outcomes.py  line_break.py  possession_labels.py  validation_sampling.py
src/models/: __init__.py  baselines.py  gnn.py  gru_possession.py  gru_train_script.py  hybrid.py  ranking.py  tabular.py  (+1 more)
tests/: __init__.py  conftest.py  test_build_store.py  test_features.py  test_ingestion.py  test_labels.py  test_models.py  test_reproduce_pipeline.py  test_splits.py
(+7 files in other folders)
