[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "frame2threat"
version = "0.1.0"
description = "Football analytics ML project for pass threat prediction using StatsBomb 360 data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frame2Threat Contributors" }]
keywords = ["football", "soccer", "analytics", "machine-learning", "gnn", "statsbomb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "statsbombpy>=1.13",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "torch>=2.0",
  "torch-geometric>=2.4",
  "matplotlib>=3.7",
  "mplsoccer>=1.2",
  "streamlit>=1.28",
  "shap>=0.43",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "scipy>=1.11",
  "networkx>=3.1",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "black>=23.0",
  "mypy>=1.5",
  "pre-commit>=3.4",
]
notebooks = [
  "jupyterlab>=4.0",
  "ipywidgets>=8.1",
]

[project.scripts]
frame2threat = "src.app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
